[package]
name = "tokio-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rt = ["tokio"]

[dependencies]
dashmap = "5.0.0"
once_cell = "1.9.0"
futures-util = "0.3.19"
pin-project-lite = "0.2.7"
tracking-allocator = { path = "../tracking-allocator" }

tokio = { version = "1.15.0", features = ["rt", "sync", "stats"], optional = true }

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
